--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
 
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
+            <artifactId>selenium-support</artifactId>
         </dependency>
 
         <dependency>
