--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
     <properties>
         <start-class>de.campuswoche.http.HttpStart</start-class>
+        <java.version>17</java.version>
     </properties>
 
     <dependencyManagement>
