--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <properties>
         <start-class>de.campuswoche.http.HttpStart</start-class>
         <java.version>17</java.version>
+        <selenium.version>4.7.0</selenium.version>
     </properties>
 
     <dependencyManagement>
@@ -27,17 +28,17 @@
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-api</artifactId>
-                <version>4.7.0</version>
+                <version>${selenium.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-remote-driver</artifactId>
-                <version>4.7.0</version>
+                <version>${selenium.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-support</artifactId>
-                <version>4.7.0</version>
+                <version>${selenium.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
