--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,20 @@
     <name>workshop-2018-webseiten-steuern</name>
     <description>Project for Campuswoche 2018 Workshop Webseiten auslesen und fernsteuern</description>
 
+    <scm>
+        <connection>scm:git:https://github.com/ArloL/campuswoche-2018-webseiten-steuern.git</connection>
+        <developerConnection>scm:git:https://github.com/ArloL/campuswoche-2018-webseiten-steuern.git</developerConnection>
+        <tag>${sha1}</tag>
+        <url>https://github.com/ArloL/campuswoche-2018-webseiten-steuern/</url>
+    </scm>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://opensource.org/licenses/MIT</url>
+        </license>
+    </licenses>
+
     <properties>
         <start-class>de.campuswoche.http.HttpStart</start-class>
         <java.version>17</java.version>
